Fix horizontal scroll issue

--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -8,18 +8,30 @@
     display: flex;
     flex-direction: column;
     column-gap: 50px;
-    overflow: hidden;
 }
 
+.CardsContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1em;
+}
 
 .HorizontalScroll {
     margin-top: 50px;
     padding-bottom: 10px;
-    display: flex;
-    gap: 10px;
-    overflow-x: scroll;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: minmax(250px, 31%);
+    gap: .5em;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
+.horizontal-scroll > * {
+  scroll-snap-align: start;
+}
     /* width */
 .HorizontalScroll::-webkit-scrollbar {
     height: 8px;
@@ -79,8 +91,8 @@
     top: -105px;
   }
 
-  @media screen and (min-width: 800px){
+  @media screen and (min-width:800px) {
     .ServicesWrapper {
-        flex-direction: row;
+      flex-direction: row;
     }
   }
